<resources>
    <string name="app_name">MealMatch</string>
    <string name="app_title">MealMatch</string>
    <string name="get_started">Get Started</string>
    <string name="full_name">Full Name</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="email">Email</string>
    <string name="email_hint">example@gmail.com</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter password</string>
    <string name="password_hint">**********</string>
    <string name="reenter_password">Re-enter Password</string>
    <string name="reenter_password_hint">Re-enter password</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log in</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="dont_have_account">Do not have an account?</string>
    <string name="back_to_recipes">Back to Recipes</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="welcome_message">Enter your details to access your kitchen</string>
    <string name="icon_email">Email icon</string>
    <string name="icon_password">Password icon</string>
    <string name="toggle_password_visibility">Toggle password visibility</string>
</resources>
